--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -10,7 +10,7 @@ info:
   license:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
-  version: '0.9.3_prerelease'
+  version: '0.1.0'
 externalDocs:
   description: Find out more about OpenAPI
   url: 'https://www.openapis.org'
