--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: iWlz netwerkpunt functies
-  description: OpenAPI Koppelvlak specificatie tbv generieke netwerkfunctionaliteit.
+  description: OpenAPI Koppelvlak specificatie tbv generieke netwerkpunt functies.
   termsOfService: 'https://github.com/OAI/OpenAPI-Specification/blob/master/LICENSE'
   contact:
     name: "iStandaarden"
@@ -15,29 +15,28 @@ externalDocs:
   description: Find out more about OpenAPI
   url: 'https://www.openapis.org'
 servers:
-  - url: 'https://www.mijnnetwerkpunt.nl/abonnementen/'
-  - url: 'https://www.mijnnetwerkpunt.nl/intern/abonnementen/'
+  - url: 'https://www.mijnnetwerkpunt.nl'
 tags:
   - name: iWlz
     description: 'Alles over iWlz'
     externalDocs:
       description: Link naar iStandaarden
       url: 'https://informatiemodel.istandaarden.nl/'
-  - name: abonnementen
-    description: Beschikbare abonnementen
+  - name: netwerkpunt
+    description: koppelvlak specificaties van Netwerkpunt naar buiten
     externalDocs:
-      description: Link naar iStandaarden
-      url: 'https://www.istandaarden.nl/istandaarden/iwlz/'
-  - name: "iWlz codelijsten"
-    description: ""
+      description: todo
+      url: 'todo'
+  - name: netwerkpunt_intern
+    description: koppelvlak specificaties van Netwerkpunt naar backoffice (intern)
     externalDocs:
-      description: "Codelijsten bij iWlz 2.2"
-      url: "https://www.istandaarden.nl/ibieb/codelijsten-iwlz-221"
+      description: todo
+      url: 'todo'
 paths:
-  /abonnementen/{abonnementID}:
+  /netwerkpunt/{abonnementID}:
     delete:
       tags:
-        - abonnementen
+        - netwerkpunt
       summary: Verwijder een abonnement
       description: 'Operatie voor het verwijderen van een eerder geplaatst abonnement'
       operationId: deleteAbonnement
@@ -61,101 +60,12 @@ paths:
           description: Abonnement verwijderd
         '404':
           description: abonnementID niet gevonden 
-  /abonnementen/organisatie:
-    post:
-      tags:
-        - abonnementen
-      summary: Abonneren op entiteit van een specifieke organisatie
-      operationId: postAbonnementOrganisatie
-      parameters:
-        - in: header
-          name: X-orgKey
-          description: Uniek ID van de organisatie binnen het netwerk
-          schema:
-            type: integer
-            format: int32
-          required: true
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                entiteit:
-                  type: string
-                  enum: ["wlzindicatie","entiteitx"]
-                eventType:
-                  description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-                  type: string
-                  enum: ["all","create", "update"]
-                organisatieId:
-                  description: identificatie van de organisatie
-                  type: string
-                organisatieIdType:
-                  description: type identificatie van de organisatie
-                  type: string
-                  enum: ["UZOVI"]
-              required:
-                - entiteit
-                - event
-                - organisatieId
-                - organisatieIdType
-      callbacks:   # Callback definition
-        notificatie:   # Event name
-          '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
-              post:
-                parameters:
-                - in: header
-                  name: X-orgKey
-                  description: Uniek ID van de organisatie binnen het netwerk
-                  schema:
-                    type: integer
-                    format: int32
-                  required: true
-                requestBody:   # Contents of the callback message
-                  required: true
-                  content:
-                    application/json:
-                      schema:
-                        type: object
-                        properties:
-                            timestamp:
-                                type: string
-                                format: date-time
-                            abonnementId:
-                              type: string
-                              format: uuid
-                            eventType:
-                              type: string
-                              enum: ["create", "update"]
-                            entiteitID:
-                              type: string
-                        required:
-                          - timestamp
-                          - abonnementId
-                          - eventType
-                          - message
-                responses:   # Expected responses to the callback message
-                  '200':
-                    description: Your server returns this code if it accepts the callback
-      responses:
-        '201':
-          description: Abonnement aangemaakt
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  abonnementId:
-                    type: string
-                    format: uuid
-  /abonnementen/persoon:
+  /netwerkpunt/abonnementEntiteit:
       post:
         tags:
-          - abonnementen
-        summary: Abonneren op gegevens voor een specifiek persoon
-        operationId: postAbonnementPersoon
+          - netwerkpunt
+        summary: Abonneren op een specifiek entiteit
+        operationId: postAbonnementEntiteit
         parameters:
         - in: header
           name: X-orgKey
@@ -172,23 +82,23 @@ paths:
                 type: object
                 properties:
                   entiteit:
+                    description: naam van entiteit # of entiteitID?
                     type: string
-                    enum: ["wlzindicatie"]
                   eventType:
                     description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
                     type: string
                     enum: ["all","create", "update"]
-                  persoonId:
-                    description: identificatie persoon
+                  organisatieId:
+                    description: identificatie van de organisatie
                     type: string
-                  persoonIdType:
-                    description: type identificatie persoon
+                  organisatieIdType:
+                    description: type identificatie van de organisatie
                     type: string
-                    enum: ["BSN"]
                 required:
+                  - entiteit
                   - event
                   - organisatieId
-                  - persoonIdType
+                  - organisatieIdType
         callbacks:   # Callback definition
           notificatie:   # Event name
             '{abonneeEndpoint/notificatie}':   # The callback URL for delivering notifications
@@ -239,5 +149,231 @@ paths:
                       type: string
                       format: uuid
           '400':
-            description: Ongeldig BSN - Abonnement niet aangemaakt
+            description: Ongeldig Entiteit - Abonnement niet aangemaakt
             content: {}
+  /netwerkpunt/raadpleegdataEntiteit:
+        get:
+          tags:
+            - netwerkpunt
+          summary: BRaadplegen data entiteit bij andere netwerkpartijen
+          operationId: getDataAbonnementEntiteit
+          parameters:
+          - in: header
+            name: X-orgKey
+            description: Uniek ID van de organisatie binnen het netwerk
+            schema:
+              type: integer
+              format: int32
+            required: true
+          requestBody:
+            required: true
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    abonnementId:
+                      description: abonnementID
+                      type: string
+                      format: uuid
+                    # entiteit:
+                    #   description: naam van entiteit
+                    #   type: string
+                    # eventType:
+                    #   description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                    #   type: string
+                    #   enum: ["all","create", "update"]
+                    # organisatieId:
+                    #   description: identificatie van de organisatie
+                    #   type: string
+                    # organisatieIdType:
+                    #   description: type identificatie van de organisatie
+                    #   type: string
+                  required:
+                    - abonnementId
+                    # - entiteit
+                    # - event
+                    # - organisatieId
+                    # - organisatieIdType
+          callbacks:   # Callback definition
+            notificatie:   # Event name
+              '{abonneeEndpoint/getData}':   # The callback URL for delivering notifications
+                post:
+                  parameters:
+                  - in: header
+                    name: X-orgKey
+                    description: Uniek ID van de organisatie binnen het netwerk
+                    schema:
+                      type: integer
+                      format: int32
+                    required: true
+                  requestBody:   # Contents of the callback message
+                    required: true
+                    content:
+                      application/json:
+                        schema:
+                          type: object
+                          properties:
+                            timestamp:
+                                type: string
+                                format: date-time
+                            abonnementId:
+                              type: string
+                              format: uuid
+                            entiteitID:
+                              type: string
+                            entiteitData:
+                              type: string
+                          required:
+                            - timestamp
+                            - abonnementId
+                            - entiteitID
+                            - entiteitData
+                  responses:   # Expected responses to the callback message
+                    '200':
+                      description: Your server returns this code if it accepts the callback
+          responses:
+            '201':
+              description: verzoek ontvangen
+              content:
+                application/json:
+                  schema:
+                    type: object
+                    properties:
+                      abonnementId:
+                        type: string
+                        format: uuid
+            '400':
+              description: Ongeldig abonnementID - 
+              content: {}
+  /netwerkpunt_intern/eigenAbonnementen:
+    get:
+      tags:
+        - netwerkpunt_intern
+      summary: Raadplegen eigen actuele abonnementen bij andere netwerkpartijen
+      operationId: getEigenAbonnementen
+      # parameters:
+      # - in: header
+      #   name: X-orgKey
+      #   description: Uniek ID van de organisatie binnen het netwerk
+      #   schema:
+      #     type: integer
+      #     format: int32
+      #   required: true
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                recordType:
+                  description: record beschrijving
+                  type: string
+                eventType:
+                  description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                  type: string
+                  enum: ["all","create", "update"]
+                organisatieId:
+                  description: identificatie van de organisatie waar abonnement is aangegaan
+                  type: string
+                organisatieIdType:
+                  description: type identificatie van de organisatie
+                  type: string
+                aanmaakdatumbegin:
+                  description: kleinste datum abonnement aangegaan
+                  type: string
+                  format: date-time
+                aanmaakdatumeind:
+                  description: grootste datum abonnement aangegaan
+                  type: string
+                  format: date-time
+              required:
+                - abonnementId
+                - recordType
+                - recordID
+                - eventType
+                - organisatieId
+                - organisatieIdType
+                - aanmaakdatum
+      callbacks:   # Callback definition
+        notificatie:   # Event name
+          '{abonneeEndpoint/getData}':   # The callback URL for delivering notifications
+            post:
+              parameters:
+              - in: header
+                name: X-orgKey
+                description: Uniek ID van de organisatie binnen het netwerk
+                schema:
+                  type: integer
+                  format: int32
+                required: true
+              requestBody:   # Contents of the callback message
+                required: true
+                content:
+                  application/json:
+                    schema:
+                      type: object
+                      properties:
+                        timestamp:
+                            type: string
+                            format: date-time
+                        abonnementId:
+                          type: string
+                          format: uuid
+                        entiteitID:
+                          type: string
+                        entiteitData:
+                          type: string
+                      required:
+                        - timestamp
+                        - abonnementId
+                        - entiteitID
+                        - entiteitData
+              responses:   # Expected responses to the callback message
+                '200':
+                  description: Your server returns this code if it accepts the callback
+      responses:
+        '201':
+          description: verzoek ontvangen
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  abonnementId:
+                    description: abonnement identificatie
+                    type: string
+                    format: uuid
+                  recordType:
+                    description: record beschrijving
+                    type: string
+                  recordID:
+                    description: record identificatie
+                    type: string
+                    format: uuid
+                  eventType:
+                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                    type: string
+                    enum: ["all","create", "update"]
+                  organisatieId:
+                    description: identificatie van de organisatie waar abonnement is aangegaan
+                    type: string
+                  organisatieIdType:
+                    description: type identificatie van de organisatie
+                    type: string
+                  aanmaakdatum:
+                    description: datum abonnement aangegaan
+                    type: string
+                    format: date-time
+                required:
+                  - abonnementId
+                  - recordType
+                  - recordID
+                  - eventType
+                  - organisatieId
+                  - organisatieIdType
+                  - aanmaakdatum
+
+  # /netwerkpunt_intern/abonnees:
+  # /netwerkpunt_intern/zendNotificatie:
