--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -331,43 +331,6 @@ paths:
       #           - organisatieId
       #           - organisatieIdType
       #           - aanmaakdatum
-      callbacks:   # Callback definition
-        notificatie:   # Event name
-          '{abonneeEndpoint/getData}':   # The callback URL for delivering notifications
-            post:
-              parameters:
-              - in: header
-                name: X-orgKey
-                description: Uniek ID van de organisatie binnen het netwerk
-                schema:
-                  type: integer
-                  format: int32
-                required: true
-              requestBody:   # Contents of the callback message
-                required: true
-                content:
-                  application/json:
-                    schema:
-                      type: object
-                      properties:
-                        timestamp:
-                            type: string
-                            format: date-time
-                        abonnementId:
-                          type: string
-                          format: uuid
-                        entiteitID:
-                          type: string
-                        entiteitData:
-                          type: string
-                      required:
-                        - timestamp
-                        - abonnementId
-                        - entiteitID
-                        - entiteitData
-              responses:   # Expected responses to the callback message
-                '200':
-                  description: Your server returns this code if it accepts the callback
       responses:
         '201':
           description: verzoek ontvangen
@@ -409,6 +372,128 @@ paths:
                   - organisatieId
                   - organisatieIdType
                   - aanmaakdatum
-
-  # /netwerkpunt_intern/abonnees:
-  # /netwerkpunt_intern/zendNotificatie:
+  /netwerkpunt_intern/abonnees:
+    get:
+      tags:
+        - netwerkpunt_intern
+      summary: Raadplegen eigen actuele abonnementen bij andere netwerkpartijen
+      operationId: getEigenAbonnementen
+      parameters:
+      # - in: header
+      #   name: X-orgKey
+      #   description: Uniek ID van de organisatie binnen het netwerk
+      #   schema:
+      #     type: integer
+      #     format: int32
+      #   required: true
+      - in: header
+        name: recordType
+        description: record beschrijving
+        schema:
+          type: string
+      - in: header
+        name: eventType
+        description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+        schema: 
+          type: string
+          enum: ["all","create", "update"]
+      - in: header
+        name: organisatieId
+        description: identificatie van de organisatie waar abonnement is aangegaan
+        schema:
+          type: string
+      - in: header
+        name: organisatieIdType
+        description: type identificatie van de organisatie
+        schema:
+          type: string
+      - in: header
+        name: aanmaakdatumBegin
+        description: kleinste datum abonnement aangegaan
+        schema:
+          type: string
+          format: date-time
+      - in: header
+        name: aanmaakdatumEind
+        description: grootste datum abonnement aangegaan
+        schema:
+          type: string
+          format: date-time
+      # requestBody:
+      #   required: false
+      #   content:
+      #     application/json:
+      #       schema:
+      #         type: object
+      #         properties:
+      #           recordType:
+      #             description: record beschrijving
+      #             type: string
+      #           eventType:
+      #             description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+      #             type: string
+      #             enum: ["all","create", "update"]
+      #           organisatieId:
+      #             description: identificatie van de organisatie waar abonnement is aangegaan
+      #             type: string
+      #           organisatieIdType:
+      #             description: type identificatie van de organisatie
+      #             type: string
+      #           aanmaakdatumbegin:
+      #             description: kleinste datum abonnement aangegaan
+      #             type: string
+      #             format: date-time
+      #           aanmaakdatumeind:
+      #             description: grootste datum abonnement aangegaan
+      #             type: string
+      #             format: date-time
+      #         required:
+      #           - abonnementId
+      #           - recordType
+      #           - recordID
+      #           - eventType
+      #           - organisatieId
+      #           - organisatieIdType
+      #           - aanmaakdatum
+      responses:
+        '201':
+          description: verzoek ontvangen
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  abonnementId:
+                    description: abonnement identificatie
+                    type: string
+                    format: uuid
+                  recordType:
+                    description: record beschrijving
+                    type: string
+                  recordID:
+                    description: record identificatie
+                    type: string
+                    format: uuid
+                  eventType:
+                    description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
+                    type: string
+                    enum: ["all","create", "update"]
+                  organisatieId:
+                    description: identificatie van de organisatie waar abonnement is aangegaan
+                    type: string
+                  organisatieIdType:
+                    description: type identificatie van de organisatie
+                    type: string
+                  aanmaakdatum:
+                    description: datum abonnement aangegaan
+                    type: string
+                    format: date-time
+                required:
+                  - abonnementId
+                  - recordType
+                  - recordID
+                  - eventType
+                  - organisatieId
+                  - organisatieIdType
+                  - aanmaakdatum
+  
