--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -376,8 +376,8 @@ paths:
     get:
       tags:
         - netwerkpunt_intern
-      summary: Raadplegen eigen actuele abonnementen bij andere netwerkpartijen
-      operationId: getEigenAbonnementen
+      summary: Raadplegen actuele abonnementen die geplaatst zijn door andere netwerkpartijen
+      operationId: getAbonnees
       parameters:
       # - in: header
       #   name: X-orgKey
@@ -386,34 +386,34 @@ paths:
       #     type: integer
       #     format: int32
       #   required: true
-      - in: header
+      - in: query
         name: recordType
         description: record beschrijving
         schema:
           type: string
-      - in: header
+      - in: query
         name: eventType
         description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
         schema: 
           type: string
           enum: ["all","create", "update"]
-      - in: header
+      - in: query
         name: organisatieId
         description: identificatie van de organisatie waar abonnement is aangegaan
         schema:
           type: string
-      - in: header
+      - in: query
         name: organisatieIdType
         description: type identificatie van de organisatie
         schema:
           type: string
-      - in: header
+      - in: query
         name: aanmaakdatumBegin
         description: kleinste datum abonnement aangegaan
         schema:
           type: string
           format: date-time
-      - in: header
+      - in: query
         name: aanmaakdatumEind
         description: grootste datum abonnement aangegaan
         schema:
@@ -456,7 +456,7 @@ paths:
       #           - organisatieIdType
       #           - aanmaakdatum
       responses:
-        '201':
+        '200':
           description: verzoek ontvangen
           content:
             application/json:
