--- a/api-specificatie/netwerkpunt.yaml
+++ b/api-specificatie/netwerkpunt.yaml
@@ -167,36 +167,6 @@ paths:
               type: string
               format: uuid
             required: true
-          # requestBody:
-          #   required: true
-          #   content:
-          #     application/json:
-          #       schema:
-          #         type: object
-          #         properties:
-          #           abonnementId:
-          #             description: abonnementID
-          #             type: string
-          #             format: uuid
-          #           # entiteit:
-          #           #   description: naam van entiteit
-          #           #   type: string
-          #           # eventType:
-          #           #   description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-          #           #   type: string
-          #           #   enum: ["all","create", "update"]
-          #           # organisatieId:
-          #           #   description: identificatie van de organisatie
-          #           #   type: string
-          #           # organisatieIdType:
-          #           #   description: type identificatie van de organisatie
-          #           #   type: string
-          #         required:
-          #           - abonnementId
-          #           # - entiteit
-          #           # - event
-          #           # - organisatieId
-          #           # - organisatieIdType
           callbacks:   # Callback definition
             notificatie:   # Event name
               '{abonneeEndpoint/getData}':   # The callback URL for delivering notifications
@@ -248,6 +218,56 @@ paths:
             '400':
               description: Ongeldig abonnementID - 
               content: {}
+  /netwerkpunt/zendNotificatie:
+    post:
+      parameters:
+      - in: header
+        name: X-orgKey
+        description: Uniek ID van de organisatie binnen het netwerk
+        schema:
+          type: integer
+          format: int32
+        required: true
+      requestBody:   # Contents of the callback message
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                timestamp:
+                    type: string
+                    format: date-time
+                abonnementId:
+                  type: string
+                  format: uuid
+                eventType:
+                  type: string
+                  enum: ["create", "update"]
+                recordID:
+                  type: string
+              required:
+                - timestamp
+                - abonnementId
+                - eventType
+                - message
+          responses:   # Expected responses to the callback message
+              '200':
+              description: Your server returns this code if it accepts the callback
+      responses:
+          '201':
+            description: Abonnement aangemaakt
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    abonnementId:
+                      type: string
+                      format: uuid
+          '400':
+            description: Ongeldig BSN - Abonnement niet aangemaakt
+            content: {}
   /netwerkpunt_intern/eigenAbonnementen:
     get:
       tags:
@@ -295,42 +315,6 @@ paths:
         schema:
           type: string
           format: date-time
-      # requestBody:
-      #   required: false
-      #   content:
-      #     application/json:
-      #       schema:
-      #         type: object
-      #         properties:
-      #           recordType:
-      #             description: record beschrijving
-      #             type: string
-      #           eventType:
-      #             description: specificatie voor welke gebeurtenissen er een abonnement wordt afgesloten. all = alle gebeurtenissen / create = alleen aanmaken / update = alleen wijzigingen
-      #             type: string
-      #             enum: ["all","create", "update"]
-      #           organisatieId:
-      #             description: identificatie van de organisatie waar abonnement is aangegaan
-      #             type: string
-      #           organisatieIdType:
-      #             description: type identificatie van de organisatie
-      #             type: string
-      #           aanmaakdatumbegin:
-      #             description: kleinste datum abonnement aangegaan
-      #             type: string
-      #             format: date-time
-      #           aanmaakdatumeind:
-      #             description: grootste datum abonnement aangegaan
-      #             type: string
-      #             format: date-time
-      #         required:
-      #           - abonnementId
-      #           - recordType
-      #           - recordID
-      #           - eventType
-      #           - organisatieId
-      #           - organisatieIdType
-      #           - aanmaakdatum
       responses:
         '201':
           description: verzoek ontvangen
